[package]
name = "apollo-router-repro"
version = "0.1.0"
edition = "2021"

[dependencies]
apollo-router = { git = "https://github.com/apollographql/router", tag = "v1.0.0-alpha.3" }
#anyhow = "1.0.64"
#async-trait = "0.1.57"
#futures = "0.3.24"
#schemars = "0.8.10"
#jsonwebtoken = "8.1.1"
#serde = "1.0.144"
#serde_json = "1.0.85"
#tokio = { version = "1.21.0", features = ["full"] }
#tower = { version = "0.4.13", features = ["full"] }
#tracing = "0.1.34"
#http = "0.2.8"
#dotenv = "0.15.0"
